Use the inital click position to anchor the icon dnd.
2004-05-05  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-dnd.h:
	* libnautilus-private/nautilus-icon-dnd.c (nautilus_icon_dnd_begin_drag):
	* libnautilus-private/nautilus-icon-container.c (motion_notify_event):
	Use the inital click position to anchor the icon dnd.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-05    <alexl@cgf.boston.redhat.com>
+
+	* libnautilus-private/nautilus-icon-dnd.h: 
+	* libnautilus-private/nautilus-icon-dnd.c (nautilus_icon_dnd_begin_drag): 
+	* libnautilus-private/nautilus-icon-container.c (motion_notify_event): 
+	Use the inital click position to anchor the icon dnd.
+
 2004-04-30  Dave Camp  <dave@ximian.com>
 
 	* libnautilus-private/nautilus-icon-container.c: (setup_label_gcs):
