Correct several spellings

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-13  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-05-08  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
@@ -279,7 +283,7 @@
 
 2004-03-09  Danilo ? egan  <dsegan@gmx.net>
 
-	* sr.po, sr@Latn.po: Fixed typos noticed by Bojan Suzi?‡.
+	* sr.po, sr@Latn.po: Fixed typos noticed by Bojan Suzi??
 
 2004-03-09  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
@@ -291,7 +295,7 @@
 
 2004-03-08  Danilo ? egan  <dsegan@gmx.net>
 
-	* sr@ije.po: Added Serbian Jekavian translation by Bojan Suzi?‡ 
+	* sr@ije.po: Added Serbian Jekavian translation by Bojan Suzi??
 	<bojans@teol.net>.
 
 === nautilus 2.5.90 ===
