--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-04-19 16:41+0200\n"
-"PO-Revision-Date: 2004-03-04 02:30+0800\n"
+"PO-Revision-Date: 2004-05-13 10:38+0800\n"
 "Last-Translator: Funda Wang <fundawang@linux.net.cn>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
@@ -3684,11 +3684,11 @@ msgstr "删除吗？"
 
 #: src/file-manager/fm-directory-view.c:1045
 msgid "Select Pattern"
-msgstr "选择图案"
+msgstr "按模式选择"
 
 #: src/file-manager/fm-directory-view.c:1061
 msgid "_Pattern:"
-msgstr "图案(_P)："
+msgstr "模式(_P)："
 
 #: src/file-manager/fm-directory-view.c:1750
 #, c-format
@@ -4796,7 +4796,7 @@ msgstr "选择全部文件(_A)"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:40
 msgid "Select _Pattern"
-msgstr "选择图案(_P)"
+msgstr "按模式选择(_P)"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:41
 msgid "Select all items in this window"
@@ -4804,7 +4804,7 @@ msgstr "选择该窗口中的所有项目"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:42
 msgid "Select items in this window matching a given pattern"
-msgstr "选择此窗口中匹配给定模式的的项目"
+msgstr "按给定模式选择此窗口中的项目"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:43
 msgid "Show media properties for the selected volume"
@@ -6384,519 +6384,3 @@ msgstr "网络服务器"
 msgid "View your network servers in the Nautilus file manager"
 msgstr "在 Nautilus 文件管理器中查看您的网络服务器"
 
-#~ msgid ""
-#~ "If you would like to enable fast searches, you can edit the file %s as "
-#~ "root. Setting the enabled flag to \"yes\" will turn medusa services on.\n"
-#~ "To start indexing and search services right away, you should also run the "
-#~ "following commands as root:\n"
-#~ "\n"
-#~ "medusa-indexd\n"
-#~ "medusa-searchd\n"
-#~ "\n"
-#~ "Fast searches will not be available until an initial index of your files "
-#~ "has been created.  This may take a long time."
-#~ msgstr ""
-#~ "如果您想启动快速搜索，您可以用 root 用户身份来编辑文件 %s。把启用标志设置"
-#~ "为“yes”会启动 medusa 服务。\n"
-#~ "要立即开始索引和搜索服务，您应该以 root 用户身份运行下列命令：\n"
-#~ "\n"
-#~ "medusa-indexd\n"
-#~ "medusa-searchd\n"
-#~ "\n"
-#~ "创建了文件的初始索引之后，您才可以使用快速搜索。创建索引可能会花很长一段时"
-#~ "间。"
-
-#~ msgid ""
-#~ "Medusa, the application that performs searches, cannot be found on your "
-#~ "system.  If you have compiled nautilus yourself, you will need to install "
-#~ "a copy of medusa and recompile nautilus.  (A copy of Medusa may be "
-#~ "available at ftp://ftp.gnome.org)\n"
-#~ "If you are using a packaged version of Nautilus, fast searching is not "
-#~ "available.\n"
-#~ msgstr ""
-#~ "Medusa 是执行搜索的应用程序。在您的系统上找不到该程序。如果您自行编译了 "
-#~ "nautilus，您将需要安装一份 medusa 后再重新编译 nautilus。(Medusa 可从 "
-#~ "ftp://ftp.gnome.org 获得)\n"
-#~ "如果您使用的是打包的 nautilus，其中没有提供快速搜索。\n"
-
-#~ msgid "[Items ]containing \"%s\" in their names"
-#~ msgstr "[项目]的名称中包含“%s”"
-
-#~ msgid "[Items ]starting with \"%s\""
-#~ msgstr "[项目]以“%s”开始"
-
-#~ msgid "[Items ]ending with %s"
-#~ msgstr "[项目]以“%s”结尾"
-
-#~ msgid "[Items ]not containing \"%s\" in their names"
-#~ msgstr "[项目]的名称中不包含“%s”"
-
-#~ msgid "[Items ]matching the regular expression \"%s\""
-#~ msgstr "[项目]匹配正则表达式“%s”"
-
-#~ msgid "[Items ]matching the file pattern \"%s\""
-#~ msgstr "[项目]匹配文件通配符“%s”"
-
-#~ msgid "[Items that are ]regular files"
-#~ msgstr "[项目是]常规文件"
-
-#~ msgid "[Items that are ]text files"
-#~ msgstr "[项目是]文本文件"
-
-#~ msgid "[Items that are ]applications"
-#~ msgstr "[项目是]应用程序"
-
-#~ msgid "[Items that are ]folders"
-#~ msgstr "[项目是]文件夹"
-
-#~ msgid "[Items that are ]music"
-#~ msgstr "[项目是]音乐"
-
-#~ msgid "[Items ]that are not %s"
-#~ msgstr "[项目]不是 %s"
-
-#~ msgid "[Items ]that are %s"
-#~ msgstr "[项目]是 %s"
-
-#~ msgid "[Items ]not owned by \"%s\""
-#~ msgstr "[项目]的所有者不是“%s”"
-
-#~ msgid "[Items ]owned by \"%s\""
-#~ msgstr "[项目]的所有者是“%s”"
-
-#~ msgid "[Items ]with owner UID \"%s\""
-#~ msgstr "[项目]所有者的 UID 是“%s”"
-
-#~ msgid "[Items ]with owner UID other than \"%s\""
-#~ msgstr "[项目]所有者的 UID 不是“%s”"
-
-#~ msgid "[Items ]larger than %s bytes"
-#~ msgstr "[项目]大于 %s 字节"
-
-#~ msgid "[Items ]smaller than %s bytes"
-#~ msgstr "[项目]小于 %s 字节"
-
-#~ msgid "[Items ]of %s bytes"
-#~ msgstr "[项目]有 %s 字节"
-
-#~ msgid "[Items ]modified today"
-#~ msgstr "[项目]今天被修改"
-
-#~ msgid "[Items ]modified yesterday"
-#~ msgstr "[项目]昨天被修改"
-
-#~ msgid "[Items ]modified on %s"
-#~ msgstr "[项目]修改日期为 %s"
-
-#~ msgid "[Items ]not modified on %s"
-#~ msgstr "[项目]修改日期不是 %s"
-
-#~ msgid "[Items ]modified before %s"
-#~ msgstr "[项目]在 %s 之前被修改"
-
-#~ msgid "[Items ]modified after %s"
-#~ msgstr "[项目]在 %s 之后被修改"
-
-#~ msgid "[Items ]modified within a week of %s"
-#~ msgstr "[项目]在 %s 这周内被修改"
-
-#~ msgid "[Items ]modified within a month of %s"
-#~ msgstr "[项目]在 %s 这月内被修改"
-
-#~ msgid "[Items ]marked with \"%s\""
-#~ msgstr "[项目]标记了 %s"
-
-#~ msgid "[Items ]not marked with \"%s\""
-#~ msgstr "[项目]没有标记 %s"
-
-#~ msgid "[Items ]with all the words \"%s\""
-#~ msgstr "[项目]包括“%s”中的所有词"
-
-#~ msgid "[Items ]containing one of the words \"%s\""
-#~ msgstr "[项目]包括“%s”中的一个词"
-
-#~ msgid "[Items ]without all the words \"%s\""
-#~ msgstr "[项目]不包括“%s”中的所有词"
-
-#~ msgid "[Items ]without any of the words \"%s\""
-#~ msgstr "[项目]不包括“%s”中的任何词"
-
-#~ msgid ""
-#~ "[Items larger than 400K] and [without all the words \"apple orange\"]"
-#~ msgstr "[项目大于 400K] 并且 [不包括“apple orange”中的所有词]"
-
-#~ msgid ""
-#~ "[Items larger than 400K], [owned by root and without all the words "
-#~ "\"apple orange\"]"
-#~ msgstr "[项目大于 400K]，[所有者为根用户并且不包括“apple orange”中的所有词]"
-
-#~ msgid "Items %s"
-#~ msgstr "项目 %s"
-
-#~ msgid "Items containing \"stuff\" in their names"
-#~ msgstr "名称中包含“stuff”的项目"
-
-#~ msgid "Items that are regular files"
-#~ msgstr "常规文件项目"
-
-#~ msgid "Items containing \"stuff\" in their names and that are regular files"
-#~ msgstr "名称中包含“stuff”的常规文件项目"
-
-#~ msgid ""
-#~ "Items containing \"stuff\" in their names, that are regular files and "
-#~ "smaller than 2000 bytes"
-#~ msgstr "名称中包含“stuff”且小于 2000 字节的常规文件项目"
-
-#~ msgid "Items containing \"medusa\" in their names and that are folders"
-#~ msgstr "名称中包含“medusa”的文件夹项目"
-
-#~ msgid ""
-#~ "Search results may not include items modified after %s, when your drive "
-#~ "was last indexed."
-#~ msgstr "搜索结果中不包括自 %s 后(最后一次索引的时间)修改的项目。"
-
-#~ msgid "Search Results"
-#~ msgstr "搜索结果"
-
-#~ msgid "Sorry, but the Medusa search service is not available."
-#~ msgstr "抱歉，Medusa 搜索服务不可用。"
-
-#~ msgid "Medusa is not installed."
-#~ msgstr "Medusa 未安装。"
-
-#~ msgid "Search Service Not Available"
-#~ msgstr "搜索服务不可用"
-
-#~ msgid ""
-#~ "The search you have selected is newer than the index on your system.  The "
-#~ "search will return no results right now."
-#~ msgstr "您选择的搜索比系统上的索引更新。现在，搜索将不会返回任何结果。"
-
-#~ msgid ""
-#~ "You can create a new index by running \"medusa-indexd\" as root on the "
-#~ "command line."
-#~ msgstr "您可以在命令行以 root 用户身份运行“medusa-indexd”来创建一个新索引。"
-
-#~ msgid "Search For Items That Are Too New"
-#~ msgstr "搜索太新的项目"
-
-#~ msgid ""
-#~ "Every indexed file on your computer matches the criteria you selected. "
-#~ msgstr "您的计算机上每个被索引的文件都匹配您的选择条件。"
-
-#~ msgid ""
-#~ "You can check the spelling on your selections or add more criteria to "
-#~ "narrow your results."
-#~ msgstr "您可以检查一下选择条件的拼写或添加更多条件来缩小搜索结果的范围。"
-
-#~ msgid "Error During Search"
-#~ msgstr "搜索时出错"
-
-#~ msgid ""
-#~ "Find cannot open your file system index.  Your index may be missing or "
-#~ "corrupt."
-#~ msgstr "Find 命令无法打开您的文件系统索引。您的索引可能已遗失或损坏。"
-
-#~ msgid "Error Reading File Index"
-#~ msgstr "读取文件索引时发生错误"
-
-#~ msgid "An error occurred while loading this search's contents."
-#~ msgstr "载入搜索内容时发生错。"
-
-#~ msgid ""
-#~ "To do a fast search, Find requires an index of the files on your system."
-#~ msgstr "要执行快速搜索，Find 需要一个您的系统上的文件索引。"
-
-#~ msgid ""
-#~ "To do a content search, Find requires an index of the files on your "
-#~ "system."
-#~ msgstr "要执行内容搜索，Find 需要一个您的系统上的文件索引。"
-
-#~ msgid ""
-#~ "Find can't access your index right now so a slower search will be "
-#~ "performed that doesn't use the index."
-#~ msgstr "Find 目前无法访问您的索引，因此它将执行不需索引的慢速搜索。"
-
-#~ msgid "Find can't access your index right now."
-#~ msgstr "Find 目前无法访问您的索引。"
-
-#~ msgid "Fast Searches Are Not Available"
-#~ msgstr "快速搜索不可用"
-
-#~ msgid "Content Searches Are Not Available"
-#~ msgstr "内容搜索不可用"
-
-#~ msgid ""
-#~ "Your index files are available but the Medusa search daemon, which "
-#~ "handles index requests, isn't running.  To start this program, log in as "
-#~ "root and enter this command at the command line:\n"
-#~ "\n"
-#~ "medusa-searchd"
-#~ msgstr ""
-#~ "您的系统上有索引文件，但是处理索引请求的 Medusa 搜索守护进程没有在运行。要"
-#~ "启动该程序，登录为根用户并在命令行中输入该命令：\n"
-#~ "\n"
-#~ "medusa-searchd"
-
-#~ msgid ""
-#~ "To do a fast search, Find requires an index of the files on your system.  "
-#~ "Your computer is currently creating that index."
-#~ msgstr ""
-#~ "要执行快速搜索，Find 需要一个您的系统上的文件索引。您的计算机目前正在创建"
-#~ "该索引。"
-
-#~ msgid ""
-#~ "To do a content search, Find requires an index of the content on your "
-#~ "system.  Your computer is currently creating that index."
-#~ msgstr ""
-#~ "要执行内容搜索，Find 需要一个您的系统上的文件索引。您的计算机目前正在创建"
-#~ "该索引。"
-
-#~ msgid ""
-#~ "Because Find cannot use an index, this search may take several minutes."
-#~ msgstr "因为 Find 无法使用索引，本项搜索可能会花几分钟时间。"
-
-#~ msgid "Content searches will be available when the index is complete."
-#~ msgstr "当索引创建完毕后，您将可以使用内容搜索。"
-
-#~ msgid "Indexed Searches Are Not Available"
-#~ msgstr "索引搜索不可用"
-
-#~ msgid ""
-#~ "To do a fast search, Find requires an index of the files on your system.  "
-#~ "No index is available right now."
-#~ msgstr "要执行快速搜索，Find 需要一个您的系统上的文件索引。目前索引不可用。"
-
-#~ msgid ""
-#~ "To do a content search, Find requires an index of the content on your "
-#~ "system.  No index is available right now."
-#~ msgstr "要执行内容搜索，Find 需要一个您的系统上的文件索引。目前索引不可用。"
-
-#~ msgid ""
-#~ "You can create an index by running \"medusa-indexd\" as root on the "
-#~ "command line.  Until a complete index is available, searches will take "
-#~ "several minutes."
-#~ msgstr ""
-#~ "您可以在命令行以 root 用户身份运行“medusa indexd”来创建索引。在完整索引可"
-#~ "用之前，搜索将会花几分钟时间。"
-
-#~ msgid ""
-#~ "You can create an index by running \"medusa-indexd\" as root on the "
-#~ "command line.  Until a complete index is available, content searches "
-#~ "cannot be performed."
-#~ msgstr ""
-#~ "您可以在命令行以 root 用户身份运行“medusa indexd”来创建索引。在完整索引可"
-#~ "用之前，将无法执行内容搜索。"
-
-#~ msgid "Fast searches are not enabled on your computer."
-#~ msgstr "您的计算机上没有启用快速搜索。"
-
-#~ msgid ""
-#~ "To do a fast search, Find requires an index of the files on your system. "
-#~ "Your system administrator has disabled fast search on your computer, so "
-#~ "no index is available."
-#~ msgstr ""
-#~ "要执行快速搜索，Find 需要有一个您的系统上的文件索引。您的系统管理员禁用了"
-#~ "系统上的快速搜索，所以没有索引可用。"
-
-#~ msgid "Fast Searches Not Enabled"
-#~ msgstr "快速搜索未启用"
-
-#~ msgid "Where"
-#~ msgstr "哪里"
-
-#~ msgid "_Reveal in New Window"
-#~ msgid_plural "Reveal in %d _New Windows"
-#~ msgstr[0] "在%d个新窗口中展现(_R)"
-
-#~ msgid "Nautilus found more search results than it can display."
-#~ msgstr "Nautilus 找到的结果太多，显示不下。"
-
-#~ msgid "Some matching items will not be displayed. "
-#~ msgstr "其中一些匹配项可能将不会被显示。"
-
-#~ msgid "Too Many Matches"
-#~ msgstr "匹配项太多"
-
-#~ msgid "Indexing is %d%% complete."
-#~ msgstr "索引完成了 %d%%。"
-
-#~ msgid "Your files were last indexed at %s."
-#~ msgstr "您的文件最后一次索引于 %s。"
-
-#~ msgid ""
-#~ "Once a day your files and text content are indexed so your searches are "
-#~ "fast. "
-#~ msgstr "每天将您的文件和文本内容进行一次索引，以便加快您的搜索速度。"
-
-#~ msgid "Indexing Status"
-#~ msgstr "索引状态"
-
-#~ msgid "Your files are currently being indexed."
-#~ msgstr "正在对您的文件进行索引。"
-
-#~ msgid ""
-#~ "Once a day your files and text content are indexed so your searches are "
-#~ "fast."
-#~ msgstr "每天将您的文件和文本内容进行一次索引，以便加快您的搜索速度。"
-
-#~ msgid "There is no index of your files right now."
-#~ msgstr "目前没有您的文件索引。"
-
-#~ msgid ""
-#~ "When Fast Search is enabled, Find creates an index to speed up searches.  "
-#~ "Fast searching is not enabled on your computer, so you do not have an "
-#~ "index right now."
-#~ msgstr ""
-#~ "当快速搜索被启用，Find 创建一个索引来加快搜索速度。您的计算机上没有启用快"
-#~ "速搜索，因此您目前没有索引。"
-
-#~ msgid "No Index of Files"
-#~ msgstr "没有文件索引"
-
-#~ msgid "Sorry, but the medusa search service is not available."
-#~ msgstr "抱歉，medusa 搜索服务不可用。"
-
-#~ msgid "Please verify medusa has been setup correctly."
-#~ msgstr "请检查 medusa 是否安装正确。"
-
-#~ msgid "%I:%M %p, %x"
-#~ msgstr "%Y年%-m月%-d日%-H:%M"
-
-#~ msgid "Reveal each selected item in its original folder"
-#~ msgstr "在各自的初始文件夹中展现每个选中项目"
-
-#~ msgid "Reveal in New Window"
-#~ msgstr "在新窗口中展现"
-
-#~ msgid "Show Indexing Status"
-#~ msgstr "显示索引状态"
-
-#~ msgid "Show _Indexing Status"
-#~ msgstr "显示索引状态(_I)"
-
-#~ msgid "Show status of indexing used when searching"
-#~ msgstr "在搜索时显示索引状态"
-
-#~ msgid "More Options"
-#~ msgstr "更多选项"
-
-#~ msgid "Fewer Options"
-#~ msgstr "更少选项"
-
-#~ msgid "Find Them!"
-#~ msgstr "找到了！"
-
-#~ msgid "[Search for] Name [contains \"fish\"]"
-#~ msgstr "[搜索] 名称 [中包含“fish”]"
-
-#~ msgid "[Search for] Content [includes all of \"fish tree\"]"
-#~ msgstr "[搜索] 内容 [中包含“fish tree”的所有词]"
-
-#~ msgid "[Search for] Type [is regular file]"
-#~ msgstr "[搜索] 类型 [是常规文件]"
-
-#~ msgid "[Search for] Size [larger than 400K]"
-#~ msgstr "[搜索] 大小 [大于 400K]"
-
-#~ msgid "[Search for] With Emblem [includes \"Important\"]"
-#~ msgstr "[搜索] 徽标 [包括“重要”]"
-
-#~ msgid "[Search for] Last Modified [before yesterday]"
-#~ msgstr "[搜索]  最后修改时间 [早于昨天]"
-
-#~ msgid "[Search for] Owner [is not root]"
-#~ msgstr "[搜索] 所有者 [不是根用户]"
-
-#~ msgid "[File name] contains [help]"
-#~ msgstr "[文件名] 包含 [帮助]"
-
-#~ msgid "[File name] starts with [nautilus]"
-#~ msgstr "[文件名] 开始为 [nautilus]"
-
-#~ msgid "[File name] ends with [.c]"
-#~ msgstr "[文件名] 结束为 [.c]"
-
-#~ msgid "[File name] matches glob [*.c]"
-#~ msgstr "[文件名] 匹配通配符 [*.c]"
-
-#~ msgid "[File name] matches regexp [\"e??l.$\"]"
-#~ msgstr "[文件名] 匹配正则表达式 [\"e??l.$\"]"
-
-#~ msgid "[File content] includes all of [apple orange]"
-#~ msgstr "[文件内容] 包含全部 [apple orange]"
-
-#~ msgid "[File content] includes any of [apply orange]"
-#~ msgstr "[文件内容] 包含任意 [apple orange]"
-
-#~ msgid "[File content] does not include all of [apple orange]"
-#~ msgstr "[文件内容] 不包含全部 [apple orange]"
-
-#~ msgid "[File content] includes none of [apple orange]"
-#~ msgstr "[文件内容] 不包含任何 [apple orange]"
-
-#~ msgid "[File type] is [folder]"
-#~ msgstr "[文件类型] 是 [文件夹]"
-
-#~ msgid "[File type] is not [folder]"
-#~ msgstr "[文件类型] 不是 [文件夹]"
-
-#~ msgid "[File type is] regular file"
-#~ msgstr "[文件类型是] 常规文件"
-
-#~ msgid "[File type is] text file"
-#~ msgstr "[文件类型是] 文本文件"
-
-#~ msgid "[File type is] application"
-#~ msgstr "[文件类型是] 应用程序"
-
-#~ msgid "[File type is] folder"
-#~ msgstr "[文件类型是] 文件夹"
-
-#~ msgid "[File type is] music"
-#~ msgstr "[文件类型是] 音乐"
-
-#~ msgid "[File size is] larger than [400K]"
-#~ msgstr "[文件大小] 大于 [400K]"
-
-#~ msgid "[File size is] smaller than [300K]"
-#~ msgstr "[文件大小] 小于 [300K]"
-
-#~ msgid "[With emblem] marked with [Important]"
-#~ msgstr "[徽标] 标记为 [重要]"
-
-#~ msgid "[With emblem] not marked with [Important]"
-#~ msgstr "[徽标] 没有标记为 [重要] "
-
-#~ msgid "[Last modified date] is [1/24/00]"
-#~ msgstr "[最后修改日期] 是 [1/24/00]"
-
-#~ msgid "[Last modified date] is not [1/24/00]"
-#~ msgstr "[最后修改日期] 不是 [1/24/00]"
-
-#~ msgid "[Last modified date] is after [1/24/00]"
-#~ msgstr "[最后修改日期] 晚于 [1/24/00]"
-
-#~ msgid "[Last modified date] is before [1/24/00]"
-#~ msgstr "[最后修改日期] 早于 [1/24/00]"
-
-#~ msgid "[Last modified date] is today"
-#~ msgstr "[最后修改日期] 是今天"
-
-#~ msgid "[Last modified date] is yesterday"
-#~ msgstr "[最后修改日期] 是昨天"
-
-#~ msgid "[Last modified date] is within a week of [1/24/00]"
-#~ msgstr "[最后修改日期] 在 [1/24/00] 一周内"
-
-#~ msgid "[Last modified date] is within a month of [1/24/00]"
-#~ msgstr "[最后修改日期] 在 [1/24/00] 一个月内"
-
-#~ msgid "[File owner] is [root]"
-#~ msgstr "[文件所有者] 是 [root]"
-
-#~ msgid "[File owner] is not [root]"
-#~ msgstr "[文件所有者] 不是 [root]"
-
-#~ msgid "Find:"
-#~ msgstr "查找："
