--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-13  Alexander Winston  <alexander.winston@comcast.net>
+
+	* libnautilus-private/nautilus-file-operations.c: Removed an
+	extraneous trailing space. Fixes #133937.
+
 2004-05-13  Marco Pesenti Gritti  <marco@gnome.org>
 
 	* src/nautilus-side-pane.c: (nautilus_side_pane_size_allocate),
