--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,15 @@
-This is nautilus 2.6.1, the file manager for the Gnome 2 desktop.
+This is nautilus 2.6.2, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.6.1 are:
+* Accessibility/keynav/theming fixes
+* Leak fixes
+* .desktop file updates
+* Fixed help buttons in the preferences dialog 
+* Portability fix
+* Use initial click position to anchor icon dnd
+* Crash fix in the file properties dialog
+* Don't overlap the close icon and text label when the sidepane
+  is very small.
 
 Major changes since 2.6.0 are:
 * Fix various crashes and leaks
