--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-13  Dave Camp  <dave@novell.com>
+
+	* NEWS: Updated for 2.6.2.
+
 2004-05-13  Alexander Winston  <alexander.winston@comcast.net>
 
 	* libnautilus-private/nautilus-file-operations.c: Removed an
