Post-release version update.
2004-05-13  Dave Camp  <dave@novell.com>

	* configure.in: Post-release version update.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-13  Dave Camp  <dave@novell.com>
+
+	* configure.in: Post-release version update.
+
 === nautilus 2.6.2 ===
 
 2004-05-13  Dave Camp  <dave@novell.com>
