--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-05-13  James Willcox  <jwillcox@gnome.org>
+
+	* src/file-manager/Makefile.am:
+	* src/file-manager/fm-bonobo-provider.c: Fix my email
+	* src/file-manager/fm-bonobo-provider.h: ditto
+	* src/file-manager/fm-ditem-page.c: New
+	* src/file-manager/fm-ditem-page.h: New
+	* src/file-manager/fm-properties-window.c: (set_icon_callback):
+	* src/nautilus-application.c: (finish_startup):
+
+	Add desktop item editing support
+
 2004-05-13  Dave Camp  <dave@novell.com>
 
 	* configure.in: Post-release version update.
