Changed the British English spelling, behaviour, to the American English
2004-05-13  Alexander Winston  <alexander.winston@comcast.net>

	* src/nautilus-file-management-properties.glade: Changed the
	British English spelling, behaviour, to the American English
	spelling, behavior.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-13  Alexander Winston  <alexander.winston@comcast.net>
+
+	* src/nautilus-file-management-properties.glade: Changed the
+	British English spelling, behaviour, to the American English
+	spelling, behavior.
+
 2004-05-13  James Willcox  <jwillcox@gnome.org>
 
 	* src/file-manager/Makefile.am:
