--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-14  Grahame Bowland  <grahame@angrygoats.net>
+
+	* src/nautilus-window.c (compute_default_title):
+	Display server name in window title for remote URIs.
+
 2004-05-13  Alexander Winston  <alexander.winston@comcast.net>
 
 	* src/nautilus-file-management-properties.glade: Changed the
