--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-14  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Bump version to 2.7.1 on HEAD.
+
 2004-05-14  Grahame Bowland  <grahame@angrygoats.net>
 
 	* src/nautilus-window.c (compute_default_title):
