Updated Hungarian translation.
2004-05-14  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-14  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 === nautilus 2.6.2 ===
 
 2004-05-13  Funda Wang  <fundawang@linux.net.cn>
