--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-15  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-05-14  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
