Updated Simplified Chinese translation

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-04-19 16:41+0200\n"
-"PO-Revision-Date: 2004-05-13 10:38+0800\n"
+"PO-Revision-Date: 2004-05-17 05:32+0800\n"
 "Last-Translator: Funda Wang <fundawang@linux.net.cn>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
@@ -4828,7 +4828,7 @@ msgstr "查看或修改每个选中项目的属性"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:51
 msgid "_Empty File"
-msgstr "清空文件(_E)"
+msgstr "空文件(_E)"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:53
 msgid "_Format"
