--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-17  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-05-14  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
