--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-17  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-05-15  Alexander Winston  <alexander.winston@comcast.net>
 
 	* en_CA.po: Updated Canadian English translation.
