Convert initial drag position to canvas coordinates. Fixes #142491.
2004-05-22  Martin Wehner  <martin.wehner@epost.de>

	* libnautilus-private/nautilus-icon-container.c (motion_notify_event):
	Convert initial drag position to canvas coordinates. Fixes #142491.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-22  Martin Wehner  <martin.wehner@epost.de>
+
+	* libnautilus-private/nautilus-icon-container.c (motion_notify_event):
+	Convert initial drag position to canvas coordinates. Fixes #142491.
+
 2004-05-18  Martin Wehner  <martin.wehner@epost.de>
 
 	* libnautilus-private/nautilus-desktop-icon-file.c (update_info_from_link):
