--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-24  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Add src/file-manager/fm-ditem-page.c
+
 2004-05-18  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translation
