--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-24  Martin Wehner  <martin.wehner@epost.de>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c
+	(nautilus_icon_canvas_item_update_bounds):
+	Tell compute_text_rectangle() to assume canvas coordinates.
+	Fixes #117356.
+
 2004-05-22  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-directory-view.c (activate_callback):
