Patch from Jamie <jamiemcc@blueyonder.co.uk>
2004-05-27  Alexander Larsson  <alexl@redhat.com>

	Patch from Jamie <jamiemcc@blueyonder.co.uk>

	* src/nautilus-application.c:
	(nautilus_application_close_all_spatial_windows):
	* src/nautilus-application.h:
	* src/nautilus-spatial-window-ui.xml:
	* src/nautilus-spatial-window.c:
	(file_menu_close_all_windows_callback), (real_merge_menus):
	Add close all spatial window menu entry.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-05-27  Alexander Larsson  <alexl@redhat.com>
+
+	Patch from Jamie <jamiemcc@blueyonder.co.uk>
+	
+	* src/nautilus-application.c:
+	(nautilus_application_close_all_spatial_windows):
+	* src/nautilus-application.h:
+	* src/nautilus-spatial-window-ui.xml:
+	* src/nautilus-spatial-window.c:
+	(file_menu_close_all_windows_callback), (real_merge_menus):
+	Add close all spatial window menu entry.
+	
 2004-05-24  Martin Wehner  <martin.wehner@epost.de>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c
